fix: stay fixed at bottom and avoid content overlap

--- a/elements/src/components/pos-tool-select/pos-tool-select.css
+++ b/elements/src/components/pos-tool-select/pos-tool-select.css
@@ -39,8 +39,7 @@ aside {
 
 @media (max-width: 640px) {
   :host {
-    /*TODO this overlaps content, while sticky is not at the bottom with small content*/
-    position: absolute;
+    position: fixed;
     top: unset;
     bottom: 0;
     width: 100dvw;
